# data-deidentifier

./: .copier-answers.yml  .env.example  Dockerfile  Makefile  docker-compose.yml  gunicorn.conf.py  mkdocs.yml  pyproject.toml
docs/: CHANGELOG.md  README.md  scope_doc.md
docs/api/: anonymization.md  pseudonymization.md
src/data_deidentifier/adapters/api/: dependencies.py  exception_handler.py  main.py  mapper.py  mappers.py  response.py  schemas.py
src/data_deidentifier/adapters/api/analyze/: router.py  schemas.py
src/data_deidentifier/adapters/api/anonymize/: router.py  schemas.py
src/data_deidentifier/adapters/api/pseudonymize/: router.py  schemas.py
src/data_deidentifier/adapters/api/routers/: analyze.py
src/data_deidentifier/adapters/infrastructure/config/: contract.py  settings.py
src/data_deidentifier/adapters/infrastructure/enrichment/: factory.py  http_service.py
src/data_deidentifier/adapters/infrastructure/http/: client.py
src/data_deidentifier/adapters/presidio/: engines.py  exceptions.py  mapper.py  validator.py
src/data_deidentifier/adapters/presidio/analyzer/: analyzer.py  structured.py  text.py
src/data_deidentifier/adapters/presidio/anonymizer/: anonymizer.py  structured.py  text.py
src/data_deidentifier/adapters/presidio/pseudonymizer/: custom_operator.py  structured.py  text.py
src/data_deidentifier/adapters/presidio/types/: entities.py
src/data_deidentifier/domain/: exceptions.py
src/data_deidentifier/domain/contracts/: analyzer.py  anonymizer.py  enricher.py  mapper.py  validator.py
src/data_deidentifier/domain/contracts/anonymizer/: structured.py  text.py
src/data_deidentifier/domain/contracts/enricher/: enricher.py  manager.py
src/data_deidentifier/domain/contracts/pseudonymizer/: method.py  structured.py  text.py
src/data_deidentifier/domain/services/: analyze.py  analyzer.py  anonymization.py
src/data_deidentifier/domain/types/: analysis_result.py  anonymization_operator.py  anonymization_result.py  enrichment_type.py  entities.py  entity.py  language.py  pseudonymization_method.py  structured_anonymization_result.py  structured_data.py  structured_pseudonymization_result.py  text_anonymization_result.py  text_pseudonymization_result.py
src/data_deidentifier/domain/utils/: utils_enum.py
src/data_deidentifier/ports/: analyzer_port.py  anonymizer_port.py  mapper_port.py
(+13 files in other folders)
