[project]
name = "data_deidentifier"
version = "0.1.0"
description = "Solution for anonymizing textual and structured data"
authors = [
  { name = "Inokufu", email = "contact@inokufu.com" }
]
dependencies = [
    "mkdocs~=1.6.1",
    "mkdocstrings-python~=1.16.12",
    "mkdocs-material~=9.6.14",
    "griffe-inherited-docstrings~=1.1.1",
    "pip~=25.1.1",
    "presidio-analyzer~=2.2.358",
    "presidio-anonymizer~=2.2.358",
    "presidio-structured~=0.0.5a0",
    "spacy~=3.8.7",
    "uvicorn[standard]~=0.35.0",
    "gunicorn~=23.0.0",
    "fastapi~=0.115.14",
    "logger @ git+https://github.com/inokufu/python-logger",
    "configcore @ git+https://github.com/inokufu/python-config",
]
readme = "docs/README.md"
requires-python = ">= 3.13"

[tool.rye]
managed = true
dev-dependencies = [
    "diff-cover~=9.4.1",
    "pre-commit~=4.2.0",
    "pytest~=8.4.1",
    "pytest-mock~=3.14.1",
    "pytest-cov~=6.2.1",
]

[tool.rye.scripts]
start = "uvicorn data_deidentifier.adapters.api.main:app --host 0.0.0.0 --port 8005 --reload"

[tool.ruff]
output-format = "concise"
target-version = "py313"
line-length = 88
indent-width = 4

lint.pydocstyle.convention = "google"
lint.flake8-bandit.check-typed-exception = true
lint.flake8-type-checking.strict = true

lint.select = ["ALL"]
lint.ignore = [
  "PLE1205", # logging-too-many-args
  "D100", # pydocstyle
  "EM", # flake8-errmsg
  "INP001", # implicit-namespace-package
  "TRY003", # raise-vanilla-args
  "TRY401", # verbose-log-message
]
lint.extend-unfixable = [
  "TC002", # typing-only-third-party-import
  "TRY400", # error-instead-of-exception
  "SIM105", # suppressible-exception
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101", # Asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov=src --cov-report=term --cov-report=xml"

[tool.coverage.report]
exclude_lines = [
  "@abstractmethod"
]
